WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279146
REGRESSION (
282524@main
) (iOS): Tap and click events unresponsive after closing Safari and coming back
https://bugs.webkit.org/show_bug.cgi?id=279146
Summary
REGRESSION (282524@main) (iOS): Tap and click events unresponsive after closi...
Richard Robinson
Reported
2024-09-04 14:31:09 PDT
rdar://135211157
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2024-09-04 14:40:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33143
EWS
Comment 2
2024-09-04 20:25:04 PDT
Committed
283187@main
(4f5b1337cdf7): <
https://commits.webkit.org/283187@main
> Reviewed commits have been landed. Closing PR #33143 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug